testsuite/tests/lexical_envs/invalid_add_to_env/kv_metadata.lkt
import common

class Example: FooNode implements TokenNode {
    env_spec {
        add_to_env_kv(key=node.symbol, value=node, metadata=1)
    }
}
